tests/neg-custom-args/captures/heal-tparam-cs.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:10:23 -------------------------------
10 |  val test1 = localCap { c => // error
   |                       ^
   |Found:    (c: Capp^?) ->? () ->{c} Unit
   |Required: (c: Capp^) => () ->? Unit
   |
   |where:    => refers to a fresh root capability created in value test1 when checking argument to parameter op of method localCap
   |          ^  refers to the universal root capability
   |
   |Note that capability c cannot be included in outer capture set ?.
11 |    () => { c.use() }
12 |  }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:15:13 -------------------------------
15 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^?) ->? () ->{x$0} Unit
   |    Required: (c: Capp^) -> () => Unit
   |
   |    where:    => refers to a root capability associated with the result type of (c: Capp^): () => Unit
   |              ^  refers to the universal root capability
   |
   |    Note that capability x$0 is not included in capture set {<cap of (x$0: Capp^?): () ->{x$0} Unit>}.
16 |      (c1: Capp^) => () => { c1.use() }
17 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:25:13 -------------------------------
25 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^?) ->? () ->{x$0} Unit
   |    Required: (c: Capp^{io}) -> () ->{net} Unit
   |    Note that capability x$0 is not included in capture set {net}.
26 |      (c1: Capp^{io}) => () => { c1.use() }
27 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:41:10 -------------------------------
41 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () -> Unit
   |          Note that capability io is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:44:10 -------------------------------
44 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () -> Unit
   |          Note that capability io is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
